...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        android:id="@+id/startButton"
        android:layout_width="255dp"
        android:layout_height="89dp"
        android:layout_marginTop="4dp"
        android:text="Tanulás elkezdése"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
...
