<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">


    <EditText
        android:id="@+id/email_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="E-mail cím"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:layout_marginBottom="16dp" />


    <EditText
        android:id="@+id/password_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Jelszó"
        android:inputType="textPassword"
        android:padding="12dp"
        android:layout_marginBottom="16dp" />


    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Regisztráció"
        android:padding="12dp" />

</LinearLayout>