<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/taskTitleEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Feladat neve"
        android:inputType="text" />

    <EditText
        android:id="@+id/taskDeadlineEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Határidő (pl. 2025-03-25)"
        android:inputType="text" />

    <EditText
        android:id="@+id/taskPomodoroCountEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Pomodoro ciklusok száma (opcionális)"
        android:inputType="number" />

    <CheckBox
        android:id="@+id/taskCompletedCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Teljesítve" />

</LinearLayout>